--- a/static/css/split.css
+++ b/static/css/split.css
@@ -4,3 +4,21 @@
 .btn-round { border-radius: 30px; }
 .bg-indigo { background: indigo; }
 .text-cyan { color: #35bdff; }
+
+.Wrapper
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+    .Wrapper > div
+    {
+        height: 100%;
+    }
+
+.left-part {
+    float: left;
+}
+.right-part {
+    overflow: auto;
+}
